--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -36,7 +36,7 @@ $cc-grey-900: #101010;
 
 /* rest of the colors */
 $cc-black: #222;
-$cc-white: $cc-grey-50;
+$cc-white: #fefefe;
 $cc-red-light: #f8d7da;
 $cc-red-dark: #842029;
 $cc-green-light: #d1e7dd;
