--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 @import 'abstracts/extends';
 
 @import 'base/global';
+@import 'base/header';
 
 @import 'components/buttons';
 @import 'components/links';
