--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 /* rest of the vars */
 /* box shadow */
 /* break points */
-.poppins-regular, .btn, .btn:visited, .btn:link {
+.poppins-regular, .btn, .btn:visited, .btn:link, .navbar .navbar__list > * {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -29,7 +29,7 @@
   font-style: normal;
 }
 
-.poppins-bold {
+.poppins-bold, .navbar .navbar__list .active {
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   font-style: normal;
@@ -59,7 +59,7 @@
   font-style: italic;
 }
 
-.dt-black {
+.dt-black, .navbar .logo {
   font-family: "DTGetaiGroteskDisplay";
   font-weight: 900;
   font-style: normal;
@@ -145,7 +145,8 @@ h2 {
 }
 
 h1 {
-  font-size: clamp(1.5rem, 2.125vw, 2.125rem); /* Large heading */
+  font-size: clamp(1.75rem, 2.5vw, 2.5rem); /* Large heading */
+  line-height: 140%;
 }
 
 h2 {
@@ -180,7 +181,7 @@ a {
 }
 
 a:hover {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 ul {
@@ -205,6 +206,63 @@ ul {
   .container {
     padding-top: 3.75rem;
     padding-bottom: 3.75rem;
+  }
+}
+.heading-container {
+  width: min(92%, 38rem);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+}
+.heading-container > * {
+  color: #fefefe;
+  text-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+}
+.heading-container p {
+  font-size: clamp(1rem, 1.125vw, 1.125rem);
+}
+
+.navbar {
+  position: fixed;
+  width: min(92%, 26rem);
+  top: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 1rem 2rem;
+  border-radius: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 20;
+  transition: 0.3s ease-in-out all;
+}
+.navbar .logo {
+  font-size: 1rem;
+  color: #fefefe;
+}
+.navbar .navbar__list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+}
+.navbar .navbar__list > * {
+  font-size: 0.875rem;
+  line-height: 100%;
+  color: #fefefe;
+}
+.navbar.show-bg {
+  background: rgba(70, 55, 209, 0.4);
+}
+
+@media screen and (min-width: 768px) {
+  .navbar {
+    border-radius: 1rem;
   }
 }
 .btn, .btn:visited, .btn:link {
