--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -124,11 +124,11 @@ ul {
   object-fit: cover;
 }
 
-.container {
+.custom-container {
   padding-top: 5rem;
   padding-bottom: 5rem;
 
-  border: 1px solid red;
+  // border: 1px solid red;
   margin: 0 auto;
 }
 
