--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,8 +8,10 @@
 
 @import 'base/global';
 @import 'base/header';
+@import 'base/projects';
 
 @import 'components/buttons';
 @import 'components/links';
 @import 'components/pills';
 @import 'components/cursor';
+@import 'components/title';
