--- a/src/index.css
+++ b/src/index.css
@@ -195,10 +195,9 @@ ul {
   object-fit: cover;
 }
 
-.container {
+.custom-container {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  border: 1px solid red;
   margin: 0 auto;
 }
 
@@ -265,6 +264,17 @@ ul {
     border-radius: 1rem;
   }
 }
+#projects {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.title-container {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
 .btn, .btn:visited, .btn:link {
   display: inline;
   padding: 0.45rem 0.9rem;
@@ -311,6 +321,7 @@ button:disabled {
 .work-pill {
   padding: 0.5rem 1rem;
   font-size: 0.875rem;
+  transition: 0.3s ease-in-out all;
 }
 .work-pill.active {
   background-color: #4637d1;
@@ -364,6 +375,12 @@ button:disabled {
   margin: -40px 0 0 -40px;
   transform: scale(0);
   transition: all 320ms cubic-bezier(0.26, 0.01, 0.17, 1);
+}
+
+.title-container {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 }
 
 /*# sourceMappingURL=index.css.map */
