--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,11 @@ svg {
   max-width: 100%;
 }
 
+svg {
+  width: 1.75rem;
+  height: 1.75rem;
+}
+
 p {
   margin: 0;
   overflow-wrap: break-word;
@@ -132,7 +137,6 @@ h2,
 h3,
 h5 {
   margin: 0;
-  font-weight: 700;
   text-transform: capitalize;
   line-height: 120%;
   color: #2a2a2a;
@@ -150,11 +154,11 @@ h1 {
 }
 
 h2 {
-  font-size: clamp(1.5rem, 3vw, 3rem); /* Medium heading */
+  font-size: clamp(1.5rem, 2vw, 2rem); /* Medium heading */
 }
 
 h3 {
-  font-size: clamp(1.25rem, 2.5vw, 2.5rem); /* Small heading */
+  font-size: clamp(1.125rem, 1.5vw, 1.5rem); /* Small heading */
 }
 
 h4 {
@@ -272,7 +276,19 @@ ul {
 .title-container {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
+}
+
+.work-article {
+  border: 1px solid #a79ef4;
+  border-radius: 0.875rem;
+  overflow: hidden;
+  width: 100%;
+  max-width: 25rem;
+}
+.work-article span,
+.work-article p {
+  font-size: 0.875rem;
 }
 
 .btn, .btn:visited, .btn:link {
@@ -375,12 +391,6 @@ button:disabled {
   margin: -40px 0 0 -40px;
   transform: scale(0);
   transition: all 320ms cubic-bezier(0.26, 0.01, 0.17, 1);
-}
-
-.title-container {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
 }
 
 /*# sourceMappingURL=index.css.map */
