--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -48,6 +48,10 @@ svg {
   display: block;
   max-width: 100%;
 }
+svg {
+  width: 1.75rem;
+  height: 1.75rem;
+}
 
 p {
   margin: 0;
@@ -60,7 +64,6 @@ h3,
 h5 {
   margin: 0;
 
-  font-weight: $font-weight-bold;
   text-transform: capitalize;
   line-height: 120%;
 
@@ -80,11 +83,11 @@ h1 {
 }
 
 h2 {
-  font-size: clamp(1.5rem, 3vw, 3rem); /* Medium heading */
+  font-size: clamp(1.5rem, 2vw, 2rem); /* Medium heading */
 }
 
 h3 {
-  font-size: clamp(1.25rem, 2.5vw, 2.5rem); /* Small heading */
+  font-size: clamp(1.125rem, 1.5vw, 1.5rem); /* Small heading */
 }
 
 h4 {
