--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 @import 'base/global';
 @import 'base/header';
 @import 'base/projects';
+@import 'base/faqs';
 
 @import 'components/buttons';
 @import 'components/links';
