--- a/src/index.css
+++ b/src/index.css
@@ -464,7 +464,7 @@ button:disabled {
   opacity: 0;
 }
 
-.faq-container .info-container {
+.question-container .info-container {
   transition: 0.3s ease-in-out all;
 }
 
