--- a/src/index.css
+++ b/src/index.css
@@ -301,6 +301,37 @@ ul {
 #faq .faq-container h2 {
   margin-bottom: 2.5rem;
 }
+#faq .link-about {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  margin: 2.5rem auto;
+  max-width: 20rem;
+  border-radius: 2rem;
+  background: #4e3de8;
+  color: #fefefe;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  transition: 0.3s ease-in-out all;
+}
+#faq .link-about span {
+  line-height: 100%;
+  font-size: 0.875rem;
+  text-transform: capitalize;
+}
+#faq .link-about svg {
+  width: 1rem;
+  height: 1rem;
+  position: absolute;
+  right: 6px;
+  animation: moving-arrow 2.5s ease infinite;
+}
+
+.question-container .info-container {
+  transition: 0.3s ease-in-out all;
+}
 
 @media screen and (min-width: 768px) {
   #faq .faq-container {
@@ -316,6 +347,25 @@ ul {
   #faq .faq-container h2 {
     text-align: center;
     margin-bottom: 3rem;
+  }
+  #faq .faq-container .link-about {
+    padding: 0.75rem 1.25rem;
+    max-width: 22.5rem;
+    margin: 4rem auto 1.5rem;
+  }
+  #faq .faq-container .link-about span {
+    font-size: 1rem;
+  }
+}
+@keyframes moving-arrow {
+  0%, 20%, 50%, 80%, 100% {
+    right: 8px;
+  }
+  40% {
+    right: 16px;
+  }
+  60% {
+    right: 12px;
   }
 }
 .btn, .btn:visited, .btn:link {
@@ -462,10 +512,6 @@ button:disabled {
 .plus-minus.question-active:before {
   transform: rotate(-180deg);
   opacity: 0;
-}
-
-.question-container .info-container {
-  transition: 0.3s ease-in-out all;
 }
 
 /*# sourceMappingURL=index.css.map */
