--- a/src/sass/base/_faqs.scss
+++ b/src/sass/base/_faqs.scss
@@ -4,6 +4,44 @@
       margin-bottom: 2.5rem;
     }
   }
+
+  .link-about {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    margin: 2.5rem auto;
+    max-width: 20rem;
+
+    border-radius: $border-radius-pill;
+    background: $cc-primary-500;
+    color: $cc-white;
+    padding: 0.5rem 1rem;
+
+    cursor: pointer;
+    transition: $transition;
+    span {
+      line-height: 100%;
+      font-size: $text-sm;
+      text-transform: capitalize;
+    }
+
+    svg {
+      width: 1rem;
+      height: 1rem;
+      position: absolute;
+      right: 6px;
+
+      animation: moving-arrow 2.5s ease infinite;
+    }
+  }
+}
+
+.question-container {
+  .info-container {
+    transition: $transition;
+  }
 }
 
 @media screen and (min-width: $breakpoint-tablet-min) {
@@ -25,6 +63,34 @@
         text-align: center;
         margin-bottom: 3rem;
       }
+
+      .link-about {
+        padding: 0.75rem 1.25rem;
+        max-width: 22.5rem;
+        margin: 4rem auto 1.5rem;
+
+        span {
+          font-size: $text-rg;
+        }
+      }
     }
+  }
+}
+
+@keyframes moving-arrow {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    right: 8px;
+  }
+
+  40% {
+    right: 16px;
+  }
+
+  60% {
+    right: 12px;
   }
 }
