--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import 'base/header';
 @import 'base/projects';
 @import 'base/faqs';
+@import 'base/footer';
 
 @import 'components/buttons';
 @import 'components/links';
