--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 @import 'base/projects';
 @import 'base/faqs';
 @import 'base/footer';
+@import 'base/aboutpage';
 
 @import 'components/buttons';
 @import 'components/links';
