--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -128,6 +128,10 @@ ul {
   object-fit: cover;
 }
 
+hr {
+  border-top: 1px solid $cc-primary-200;
+}
+
 .custom-container {
   padding-top: 5rem;
   padding-bottom: 5rem;
