--- a/src/sass/base/_header.scss
+++ b/src/sass/base/_header.scss
@@ -32,6 +32,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
 
   z-index: 20;
 
