--- a/src/sass/components/_links.scss
+++ b/src/sass/components/_links.scss
@@ -1,4 +1,4 @@
-.link-credential {
+.about-link {
   display: inline-block;
   padding: 0.375rem 0.75rem;
 
@@ -6,6 +6,7 @@
   border: 1px solid $cc-primary-50;
   background: $cc-primary-50;
 
+  font-size: $text-sm;
   text-transform: capitalize;
   color: $cc-text-blue;
 
