--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
 @import 'base/faqs';
 @import 'base/footer';
 @import 'base/aboutpage';
+@import 'base/loading';
 
 @import 'components/buttons';
 @import 'components/links';
