--- a/src/index.css
+++ b/src/index.css
@@ -462,6 +462,19 @@ footer#footer .custom-container .email .clipboard-msg {
   box-shadow: 0px 8px 44px 0px rgba(78, 61, 232, 0.12);
 }
 
+#intro-slider {
+  background: rgba(70, 55, 209, 0.9);
+  z-index: 200;
+  opacity: 0.7;
+  transition: 0.3s ease-in-out all;
+  -webkit-backdrop-filter: blur(6px);
+  backdrop-filter: blur(6px);
+}
+#intro-slider h3 {
+  color: #fefefe;
+  opacity: 1;
+}
+
 .btn, .btn:visited, .btn:link {
   display: inline;
   padding: 0.45rem 0.9rem;
