--- a/src/sass/base/_loading.scss
+++ b/src/sass/base/_loading.scss
@@ -11,3 +11,14 @@
     opacity: 1;
   }
 }
+
+@media screen and (min-width: $breakpoint-tablet-min) {
+  #intro-slider {
+    h3 {
+      color: transparent;
+      -webkit-text-stroke: 2px $cc-secondary-300;
+      text-stroke: 2px $cc-secondary-300;
+      opacity: 1;
+    }
+  }
+}
