--- a/src/index.css
+++ b/src/index.css
@@ -634,4 +634,127 @@ button:disabled {
   opacity: 0;
 }
 
+@keyframes moveInCircle {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes moveVertical {
+  0% {
+    transform: translateY(-50%);
+  }
+  50% {
+    transform: translateY(50%);
+  }
+  100% {
+    transform: translateY(-50%);
+  }
+}
+@keyframes moveHorizontal {
+  0% {
+    transform: translateX(-50%) translateY(-10%);
+  }
+  50% {
+    transform: translateX(50%) translateY(10%);
+  }
+  100% {
+    transform: translateX(-50%) translateY(-10%);
+  }
+}
+.gradient-bg {
+  width: 100vw;
+  width: 100svw;
+  height: 100vh;
+  height: 100svh;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  background: linear-gradient(40deg, #271f74, rgb(108, 0, 162));
+}
+.gradient-bg svg {
+  display: none;
+}
+.gradient-bg .gradients-container {
+  filter: url(#goo) blur(40px);
+  width: 100%;
+  height: 100%;
+}
+.gradient-bg .gradients-container .g1 {
+  position: absolute;
+  background: radial-gradient(circle at center, rgba(70, 55, 209, 0.8) 0, rgba(70, 55, 209, 0) 50%) no-repeat;
+  mix-blend-mode: hard-light;
+  width: 80%;
+  height: 80%;
+  top: -30%/2;
+  left: -30%/2;
+  transform-origin: center center;
+  animation: moveVertical 30s ease infinite;
+  opacity: 1;
+}
+.gradient-bg .gradients-container .g2 {
+  position: absolute;
+  background: radial-gradient(circle at center, rgba(116, 235, 213, 0.8) 0, rgba(116, 235, 213, 0) 50%) no-repeat;
+  mix-blend-mode: hard-light;
+  width: 80%;
+  height: 80%;
+  top: -30%/2;
+  left: -30%/2;
+  transform-origin: calc(50% - 400px);
+  animation: moveInCircle 20s reverse infinite;
+  opacity: 1;
+}
+.gradient-bg .gradients-container .g3 {
+  position: absolute;
+  background: radial-gradient(circle at center, rgba(120, 75, 160, 0.8) 0, rgba(120, 75, 160, 0) 50%) no-repeat;
+  mix-blend-mode: hard-light;
+  width: 80%;
+  height: 80%;
+  top: calc(10% + 200px);
+  left: calc(10% - 500px);
+  transform-origin: calc(50% + 400px);
+  animation: moveInCircle 40s linear infinite;
+  opacity: 1;
+}
+.gradient-bg .gradients-container .g4 {
+  position: absolute;
+  background: radial-gradient(circle at center, rgba(255, 60, 172, 0.8) 0, rgba(255, 60, 172, 0) 50%) no-repeat;
+  mix-blend-mode: hard-light;
+  width: 80%;
+  height: 80%;
+  top: 10%;
+  left: 10%;
+  transform-origin: calc(50% - 200px);
+  animation: moveHorizontal 40s ease infinite;
+  opacity: 0.7;
+}
+.gradient-bg .gradients-container .g5 {
+  position: absolute;
+  background: radial-gradient(circle at center, rgba(159, 172, 230, 0.8) 0, rgba(159, 172, 230, 0) 50%) no-repeat;
+  mix-blend-mode: hard-light;
+  width: 160%;
+  height: 160%;
+  top: -30%;
+  left: -30%;
+  transform-origin: calc(50% - 800px) calc(50% + 200px);
+  animation: moveInCircle 20s ease infinite;
+  opacity: 1;
+}
+.gradient-bg .gradients-container .interactive {
+  position: absolute;
+  background: radial-gradient(circle at center, rgba(255, 243, 151, 0.8) 0, rgba(255, 243, 151, 0) 50%) no-repeat;
+  mix-blend-mode: hard-light;
+  width: 100%;
+  height: 100%;
+  top: -50%;
+  left: -50%;
+  opacity: 0.7;
+}
+
 /*# sourceMappingURL=index.css.map */
