--- a/src/sass/components/_animatedbg.scss
+++ b/src/sass/components/_animatedbg.scss
@@ -47,10 +47,8 @@ $blending: hard-light;
 }
 
 .gradient-bg {
-  width: 100vw;
-  width: 100svw;
-  height: 100vh;
-  height: 100svh;
+  width: 100%;
+  height: 100%;
   position: absolute;
   overflow: hidden;
   top: 0;
