--- a/src/index.css
+++ b/src/index.css
@@ -668,10 +668,8 @@ button:disabled {
   }
 }
 .gradient-bg {
-  width: 100vw;
-  width: 100svw;
-  height: 100vh;
-  height: 100svh;
+  width: 100%;
+  height: 100%;
   position: absolute;
   overflow: hidden;
   top: 0;
