--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -10,6 +10,7 @@
     font-size: $text-sm;
     text-transform: capitalize;
 
+    transition: $transition;
     cursor: pointer;
   }
 
@@ -18,6 +19,10 @@
 
     background: $cc-primary-600;
     color: $cc-text-mode;
+
+    &:hover {
+      background: $cc-primary-800;
+    }
   }
 
   &-secondary {
@@ -25,6 +30,10 @@
 
     border: $border-basic;
     color: $cc-primary-400;
+
+    &:hover {
+      background: $cc-primary-50;
+    }
   }
 }
 
