--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,7 @@
 @import 'base/footer';
 @import 'base/aboutpage';
 @import 'base/loading';
+@import 'base/ganadara';
 
 @import 'components/buttons';
 @import 'components/links';
