--- a/src/sass/base/_ganadara.scss
+++ b/src/sass/base/_ganadara.scss
@@ -9,7 +9,7 @@
     background-repeat: no-repeat;
     background-size: cover;
 
-    background-image: url(./ganadara-assets/Ganadara-hero.webp);
+    background-image: url(../public/gana/Ganadara-hero.webp);
   }
 
   hr {
