--- a/src/index.css
+++ b/src/index.css
@@ -497,8 +497,7 @@ footer#footer .custom-container .email .clipboard-msg {
   }
 }
 #ganadara .hero {
-  width: 100vw;
-  width: 100svw;
+  width: 100%;
   height: 50vh;
   height: 50svh;
   background-position: center;
@@ -513,6 +512,13 @@ footer#footer .custom-container .email .clipboard-msg {
 #ganadara h4 {
   color: #2a2a2a;
   text-transform: capitalize;
+}
+
+#gana-design-process {
+  background: #ebebeb;
+}
+#gana-design-process p {
+  color: #343434;
 }
 
 .btn, .btn:visited, .btn:link {
