--- a/src/sass/base/_ganadara.scss
+++ b/src/sass/base/_ganadara.scss
@@ -21,6 +21,11 @@
     color: $cc-text-title;
     text-transform: capitalize;
   }
+
+  h5 {
+    color: $cc-text-title;
+    text-transform: capitalize;
+  }
 }
 
 #gana-design-process {
