--- a/src/index.css
+++ b/src/index.css
@@ -490,7 +490,7 @@ footer#footer .custom-container .email .clipboard-msg {
 
 @media screen and (min-width: 768px) {
   #intro-slider h3 {
-    color: transparent;
+    color: transparent !important;
     -webkit-text-stroke: 2px #fff397;
     text-stroke: 2px #fff397;
     opacity: 1;
@@ -523,6 +523,28 @@ footer#footer .custom-container .email .clipboard-msg {
 }
 #gana-design-process p {
   color: #343434;
+}
+
+#redesign-ifly .hero {
+  width: 100%;
+  height: 50vh;
+  height: 50svh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(../public/ifly/ifly-hero.webp);
+}
+#redesign-ifly hr {
+  border-top: 1px solid #c2c2c2;
+}
+#redesign-ifly h3,
+#redesign-ifly h4 {
+  color: #2a2a2a;
+  text-transform: capitalize;
+}
+#redesign-ifly h5 {
+  color: #2a2a2a;
+  text-transform: capitalize;
 }
 
 .btn, .btn:visited, .btn:link {
