--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import 'base/aboutpage';
 @import 'base/loading';
 @import 'base/ganadara';
+@import 'base/redesignIfly';
 
 @import 'components/buttons';
 @import 'components/links';
