--- a/src/index.css
+++ b/src/index.css
@@ -532,7 +532,7 @@ footer#footer .custom-container .email .clipboard-msg {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url(../public/ifly/ifly-hero.webp);
+  background-image: url(../ifly/ifly-hero.webp);
 }
 #redesign-ifly hr {
   border-top: 1px solid #c2c2c2;
