--- a/src/sass/base/_redesignIfly.scss
+++ b/src/sass/base/_redesignIfly.scss
@@ -8,7 +8,7 @@
     background-repeat: no-repeat;
     background-size: cover;
 
-    background-image: url(../ifly/ifly-hero.webp);
+    background-image: url(../Ifly/ifly-hero.webp);
   }
 
   hr {
