--- a/src/sass/base/_loading.scss
+++ b/src/sass/base/_loading.scss
@@ -7,7 +7,7 @@
   -webkit-backdrop-filter: blur(6px);
   backdrop-filter: blur(6px);
 
-  & h3 {
+  & h3.loading-header {
     color: $cc-white;
     opacity: 1;
   }
