--- a/src/index.css
+++ b/src/index.css
@@ -475,6 +475,16 @@ footer#footer .custom-container .email .clipboard-msg {
   box-shadow: 0px 8px 44px 0px rgba(78, 61, 232, 0.12);
 }
 
+@media screen and (min-width: 768px) {
+  .education-card {
+    max-width: 20rem;
+  }
+}
+@media screen and (min-width: 1124px) {
+  .education-card {
+    max-width: 24rem;
+  }
+}
 #intro-slider {
   background: #4637d1;
   z-index: 200;
