--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,6 +15,7 @@
 @import 'base/loading';
 @import 'base/ganadara';
 @import 'base/redesignIfly';
+@import 'base/candle';
 
 @import 'components/buttons';
 @import 'components/links';
