--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,7 @@
 @import 'base/ganadara';
 @import 'base/redesignIfly';
 @import 'base/candle';
+@import 'base/digitalMarketing';
 
 @import 'components/buttons';
 @import 'components/links';
