--- a/src/index.css
+++ b/src/index.css
@@ -557,24 +557,25 @@ footer#footer .custom-container .email .clipboard-msg {
   text-transform: capitalize;
 }
 
-#candle-img {
+#candle .hero {
+  width: 100%;
+  height: 50vh;
+  height: 50svh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 100vh;
-  background-image: url(../public/candle/img-bg.webp);
+  background-image: url(../public/candle/CandleHero.webp);
 }
-#candle-img .candle-title {
+#candle .candle-title {
   background: linear-gradient(91deg, #78a7f6 10.48%, #88d6e0 90.27%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-#candle-img h4 {
-  color: #7badf4;
-}
-#candle-img p {
-  color: #5383c7;
+#candle h4,
+#candle h3,
+#candle h5 {
+  color: #2673f0;
 }
 
 #digital-marketing {
