--- a/src/sass/base/_candle.scss
+++ b/src/sass/base/_candle.scss
@@ -1,10 +1,16 @@
-#candle-img {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 100vh;
+#candle {
+  & .hero {
+    width: 100%;
+    // width: 100svw;
+    height: 50vh;
+    height: 50svh;
 
-  background-image: url(../public/candle/img-bg.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    background-image: url(../public/candle/CandleHero.webp);
+  }
 
   & .candle-title {
     background: linear-gradient(91deg, #78a7f6 10.48%, #88d6e0 90.27%);
@@ -13,11 +19,9 @@
     -webkit-text-fill-color: transparent;
   }
 
-  & h4 {
-    color: #7badf4;
-  }
-
-  & p {
-    color: #5383c7;
+  & h4,
+  h3,
+  h5 {
+    color: #2673f0;
   }
 }
