--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import 'base/redesignIfly';
 @import 'base/candle';
 @import 'base/digitalMarketing';
+@import 'base/gabriel';
 
 @import 'components/buttons';
 @import 'components/links';
