--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,27 @@ p {
   overflow-wrap: break-word;
 }
 
+p::-moz-selection,
+h1::-moz-selection,
+h2::-moz-selection,
+h3::-moz-selection,
+h4::-moz-selection,
+h5::-moz-selection,
+h6::-moz-selection {
+  background-color: #fff397;
+  color: #4637d1;
+}
+p::selection,
+h1::selection,
+h2::selection,
+h3::selection,
+h4::selection,
+h5::selection,
+h6::selection {
+  background-color: #fff397;
+  color: #4637d1;
+}
+
 h1,
 h2,
 h3,
