--- a/src/sass/base/_header.scss
+++ b/src/sass/base/_header.scss
@@ -39,8 +39,7 @@
 
   .logo {
     @extend .dt-black;
-    font-size: $text-rg;
-    color: $cc-text-mode;
+    font-size: clamp(0.875rem, 1.25vw, 1.25rem);
   }
 
   .navbar__list {
@@ -53,7 +52,6 @@
       @extend .poppins-regular;
       font-size: $text-sm;
       line-height: 100%;
-      color: $cc-grey-50;
     }
 
     .active {
@@ -66,6 +64,11 @@
 
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
+
+    & > *,
+    a {
+      color: $cc-white;
+    }
   }
 }
 
