--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,6 +18,7 @@
 @import 'base/candle';
 @import 'base/digitalMarketing';
 @import 'base/gabriel';
+@import 'base/newHeader';
 
 @import 'components/buttons';
 @import 'components/links';
