--- a/src/sass/components/_cursor.scss
+++ b/src/sass/components/_cursor.scss
@@ -41,3 +41,9 @@
   transform: scale(0);
   transition: all 320ms cubic-bezier(0.26, 0.01, 0.17, 1);
 }
+
+@media screen and ($breakpoint-tablet-min) {
+  * {
+    cursor: default;
+  }
+}
