--- a/src/sass/base/_projects.scss
+++ b/src/sass/base/_projects.scss
@@ -42,5 +42,15 @@
 
 article.project-item {
   opacity: 0;
-  transform: translateY(200px);
+  transform: translateY(100px);
+}
+
+.project-title {
+  opacity: 0;
+  transform: translateX(-200%);
+}
+
+.project-category {
+  opacity: 0;
+  transform: translateX(200%);
 }
