--- a/src/sass/base/_aboutpage.scss
+++ b/src/sass/base/_aboutpage.scss
@@ -43,3 +43,27 @@
     max-width: 24rem;
   }
 }
+
+#about-work,
+.about-school-card,
+.about-license-card {
+  opacity: 0;
+  transform: translateY(200px);
+}
+
+.about-education-title,
+.about-license-title {
+  opacity: 0;
+  transform: translateX(-25px);
+}
+
+@media screen and (min-width: 2000px), (min-height: 2000px) {
+  #about-work,
+  .about-school-card,
+  .about-license-card,
+  .about-education-title,
+  .about-license-title {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
