removed preload animation and added heropage animation

--- a/src/sass/base/_header.scss
+++ b/src/sass/base/_header.scss
@@ -20,6 +20,11 @@
 }
 
 .navbar {
+  opacity: 0;
+  transition: $transition;
+}
+
+.navbar {
   position: fixed;
   width: min(92%, 26rem);
   top: 1rem;
