--- a/src/index.css
+++ b/src/index.css
@@ -290,6 +290,11 @@ hr {
 }
 
 .navbar {
+  opacity: 0;
+  transition: 0.3s ease-in-out all;
+}
+
+.navbar {
   position: fixed;
   width: min(92%, 26rem);
   top: 1rem;
@@ -671,8 +676,12 @@ footer#footer .custom-container .email .clipboard-msg {
 }
 
 .intro-container {
-  padding: 28vh clamp(4rem, 12vw, 20rem) 12rem;
+  padding: 2rem clamp(4rem, 12vw, 20rem) 0;
+  display: grid;
+  place-items: center;
   text-align: left;
+  height: 100vh;
+  max-height: 1920px;
 }
 .intro-container h1 {
   font-size: clamp(2.5rem, 5vw, 8rem);
@@ -690,7 +699,7 @@ footer#footer .custom-container .email .clipboard-msg {
   .intro-container {
     width: 90%;
     margin: 0 auto;
-    padding: 25vh 0 4rem;
+    padding: 20vh 0 5vh;
   }
 }
 .btn, .btn:visited, .btn:link {
