--- a/src/sass/base/_newHeader.scss
+++ b/src/sass/base/_newHeader.scss
@@ -1,6 +1,10 @@
 .intro-container {
-  padding: 28vh clamp(4rem, 12vw, 20rem) 12rem;
+  padding: 2rem clamp(4rem, 12vw, 20rem) 0;
+  display: grid;
+  place-items: center;
   text-align: left;
+  height: 100vh;
+  max-height: 1920px;
 
   h1 {
     font-size: clamp(2.5rem, 5vw, 8rem);
@@ -21,6 +25,6 @@
   .intro-container {
     width: 90%;
     margin: 0 auto;
-    padding: 25vh 0 4rem;
+    padding: 20vh 0 5vh;
   }
 }
