--- a/src/sass/base/_newHeader.scss
+++ b/src/sass/base/_newHeader.scss
@@ -1,9 +1,9 @@
 .intro-container {
-  padding: 2rem clamp(4rem, 12vw, 20rem) 0;
+  padding: max(7rem, 10vh) clamp(4rem, 12vw, 18rem) 0;
   display: grid;
   place-items: center;
   text-align: left;
-  height: 100vh;
+  min-height: 100vh;
   max-height: 1920px;
 
   h1 {
