--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,6 +19,7 @@
 @import 'base/digitalMarketing';
 @import 'base/gabriel';
 @import 'base/newHeader';
+@import 'base/thirdHeader';
 
 @import 'components/buttons';
 @import 'components/links';
