--- a/src/index.css
+++ b/src/index.css
@@ -342,6 +342,10 @@ hr {
   align-items: flex-start;
 }
 
+#projects {
+  background-color: #fdfcf9;
+}
+
 .work-article {
   border: 1px solid #a79ef4;
   border-radius: 0.875rem;
@@ -371,21 +375,6 @@ hr {
 .work-article .git:hover {
   background: #edecfd;
   border: 1px solid #a79ef4;
-}
-
-article.project-item {
-  opacity: 0;
-  transform: translateY(100px);
-}
-
-.project-title {
-  opacity: 0;
-  transform: translateX(-200%);
-}
-
-.project-category {
-  opacity: 0;
-  transform: translateX(200%);
 }
 
 #faq .faq-container {
@@ -675,7 +664,7 @@ footer#footer .custom-container .email .clipboard-msg {
 }
 
 .intro-container {
-  padding: max(7rem, 10vh) clamp(4rem, 12vw, 18rem) 0;
+  padding: 0 clamp(4rem, 12vw, 18rem) 0;
   display: grid;
   place-items: center;
   text-align: left;
@@ -683,7 +672,7 @@ footer#footer .custom-container .email .clipboard-msg {
   max-height: 1920px;
 }
 .intro-container h5 {
-  font-size: clamp(2.5rem, 5vw, 8rem);
+  font-size: clamp(2.5rem, 3.5vw, 3.5rem);
   line-height: 140%;
   text-transform: none;
   color: #4e3de8;
@@ -694,11 +683,97 @@ footer#footer .custom-container .email .clipboard-msg {
   color: #fff397;
 }
 
+.reveal-content {
+  color: #6050ea;
+  transform: translateX(-40px);
+  opacity: 0;
+  transition: 0.3s ease-in-out all;
+}
+
+#home-about {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  min-height: 100vh;
+  min-height: 100svh;
+  width: 100vw;
+  width: 100svw;
+  background-color: #4637d1;
+  color: #cac5f8;
+}
+
 @media screen and (max-width: 767px) {
   .intro-container {
     width: 90%;
     margin: 0 auto;
     padding: 20vh 0 5vh;
+  }
+}
+.controls {
+  border: 3px solid red;
+  color: hsl(0, 0%, 10%);
+  height: 200vh;
+}
+
+.third-header-container {
+  position: sticky;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  place-items: center;
+}
+
+#new-header {
+  font-size: 16px;
+  resize: both;
+  max-width: 70vw;
+  overflow: hidden;
+  padding: 10ch;
+  margin: 0;
+}
+
+#new-header > .new-header-span {
+  font-size: 16px;
+  outline-color: hsl(10, 80%, 50%);
+  outline-offset: 1ch;
+  font-size: clamp(3rem, 4vw + 1rem, 10rem);
+  color: hsla(0, 0%, 100%, 0.1);
+  text-decoration: none;
+  background-image: linear-gradient(90deg, transparent calc(100% - 8ch), #4637d1 calc(100% - 8ch)), linear-gradient(90deg, #6050ea, #6050ea), linear-gradient(90deg, hsla(0, 0%, 50%, 0.15), hsla(0, 0%, 50%, 0.15));
+  background-size: 200vmax 1lh, 200vmax 1lh, 100% 1lh;
+  background-repeat: no-repeat;
+  background-position-x: 0;
+  background-position-y: 100%;
+  background-clip: text;
+  color: #4637d1;
+}
+
+@supports (animation-timeline: scroll()) {
+  @media (prefers-reduced-motion: no-preference) {
+    .controls {
+      view-timeline-name: --section;
+    }
+    #new-header > .new-header-span {
+      background-position-x: -200vmax, -200vmax, 0;
+      color: transparent;
+      animation-name: fill-up, color-in;
+      animation-fill-mode: both;
+      animation-timing-function: linear;
+      animation-timeline: --section;
+      animation-range: entry 100% cover 50%, cover 50% exit 0%;
+    }
+    @keyframes fill-up {
+      to {
+        background-position-x: 0, 0, 0;
+      }
+    }
+    @keyframes color-in {
+      to {
+        color: #4637d1;
+      }
+    }
   }
 }
 .btn, .btn:visited, .btn:link {
