--- a/src/sass/base/_projects.scss
+++ b/src/sass/base/_projects.scss
@@ -3,6 +3,9 @@
   flex-direction: column;
   align-items: flex-start;
 }
+#projects {
+  background-color: $cc-background;
+}
 
 .work-article {
   border: $border-basic;
@@ -40,17 +43,17 @@
   }
 }
 
-article.project-item {
-  opacity: 0;
-  transform: translateY(100px);
-}
+// article.project-item {
+//   opacity: 0;
+//   transform: translateY(100px);
+// }
 
-.project-title {
-  opacity: 0;
-  transform: translateX(-200%);
-}
+// .project-title {
+//   opacity: 0;
+//   transform: translateX(-200%);
+// }
 
-.project-category {
-  opacity: 0;
-  transform: translateX(200%);
-}
+// .project-category {
+//   opacity: 0;
+//   transform: translateX(200%);
+// }
