--- a/src/sass/base/_projects.scss
+++ b/src/sass/base/_projects.scss
@@ -43,17 +43,17 @@
   }
 }
 
-// article.project-item {
-//   opacity: 0;
-//   transform: translateY(100px);
-// }
+article.project-item {
+  opacity: 0;
+  transform: translateY(100px);
+}
 
-// .project-title {
-//   opacity: 0;
-//   transform: translateX(-200%);
-// }
+.project-title {
+  opacity: 0;
+  transform: translateX(-200%);
+}
 
-// .project-category {
-//   opacity: 0;
-//   transform: translateX(200%);
-// }
+.project-category {
+  opacity: 0;
+  transform: translateX(200%);
+}
