divide to each components

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -22,6 +22,9 @@ $cc-secondary-700: #946244;
 $cc-secondary-800: #6f4933;
 $cc-secondary-900: #4a3122;
 
+$cc-sand-600: #fcf6ec;
+$cc-sand-800: #e5ddce;
+
 /* grey */
 $cc-grey-50: #fefefe;
 $cc-grey-100: #ebebeb;
