--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 /* rest of the vars */
 /* box shadow */
 /* break points */
-.poppins-regular, .btn, .btn:visited, .btn:link, .navbar .navbar__list > * {
+.poppins-regular, #hero .hero-title p, .btn, .btn:visited, .btn:link, .navbar .navbar__list > * {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -307,6 +307,9 @@ hr {
   justify-content: space-between;
   z-index: 20;
   transition: 0.3s ease-in-out all;
+}
+.navbar a {
+  color: #fefefe;
 }
 .navbar .logo {
   font-size: clamp(0.875rem, 1.25vw, 1.25rem);
@@ -1081,6 +1084,34 @@ button:disabled {
   top: -50%;
   left: -50%;
   opacity: 0.7;
+}
+
+#hero {
+  display: grid;
+  place-items: end;
+  padding-bottom: 18vh;
+}
+#hero .hero-title {
+  text-align: left;
+  width: 92vw;
+  margin: 0 auto;
+}
+#hero .hero-title h5 {
+  color: #fcf6ec;
+  font-size: clamp(2.375rem, 5vw, 8rem);
+  line-height: 120%;
+  text-transform: none;
+  max-width: max(68rem, 60vw);
+}
+#hero .hero-title p {
+  color: #e5ddce;
+  font-size: clamp(1.375rem, 2.5vw, 4rem);
+  line-height: 140%;
+  max-width: max(68rem, 60vw);
+}
+
+.about {
+  background-color: #fdfcf9;
 }
 
 /*# sourceMappingURL=index.css.map */
