--- a/src/sass/new_home/_hero.scss
+++ b/src/sass/new_home/_hero.scss
@@ -7,6 +7,7 @@
     text-align: left;
     width: 92vw;
     margin: 0 auto;
+
     h5 {
       color: $cc-sand-600;
       font-size: clamp(2.375rem, 5vw, 8rem);
@@ -14,12 +15,16 @@
       text-transform: none;
       max-width: max(68rem, 60vw);
     }
+
     p {
       @extend .poppins-regular;
+
+      margin-top: 1rem;
       color: $cc-sand-800;
-      font-size: clamp(1.375rem, 2.5vw, 4rem);
-      line-height: 140%;
+      font-size: clamp(1.25rem, 1.75vw, 2rem);
+      line-height: 180%;
       max-width: max(68rem, 60vw);
+      opacity: 1;
     }
   }
 }
