--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
   font-style: normal;
 }
 
-.poppins-medium {
+.poppins-medium, .scroller__inner li {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-style: normal;
@@ -1120,7 +1120,7 @@ button:disabled {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url(../public/narae.webp);
+  background-image: url(../narae.webp);
   background-color: #372ba2;
   background-blend-mode: screen;
   transition: 0.3s ease-in-out all 0.025s;
@@ -1135,6 +1135,81 @@ button:disabled {
 .home_about--me p {
   color: #4637d1;
   min-height: 40px;
+}
+
+.fill_scroller {
+  background: #4637d1;
+}
+.fill_scroller li {
+  color: #fcf6ec;
+}
+
+.stroke_scroller {
+  background: transparent;
+  border: 2px solid #4637d1;
+}
+.stroke_scroller li {
+  color: #4637d1;
+}
+
+.scroller {
+  max-width: 100vw;
+}
+.scroller__inner {
+  padding-block: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.scroller__inner li {
+  font-size: 2rem;
+  display: block;
+  text-transform: uppercase;
+}
+.scroller[data-animated=true] {
+  overflow: hidden;
+  -webkit-mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+  mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+}
+.scroller[data-animated=true] .scroller__inner {
+  width: max-content;
+  flex-wrap: nowrap;
+  animation: scroll var(--_animation-duration, 40s) var(--_animation-direction, forwards) linear infinite;
+}
+.scroller[data-direction=right] {
+  --_animation-direction: reverse;
+}
+.scroller[data-direction=left] {
+  --_animation-direction: forwards;
+}
+.scroller[data-speed=slow] {
+  --_animation-duration: 200s;
+}
+.scroller[data-speed=fast] {
+  --_animation-duration: 100s;
+}
+
+@keyframes scroll {
+  to {
+    transform: translate(calc(-50% - 1rem));
+  }
+}
+.home_about--my_image {
+  transform: translateX(-10vw);
+  opacity: 0;
+  transition: 0.3s ease-in-out all;
+}
+
+.home_about--me .home_me_title {
+  transform: translateX(20px);
+  opacity: 0;
+  transition: 0.3s ease-in-out all;
+}
+
+p.home_about-feature {
+  transform: translateY(20px);
+  opacity: 0;
+  transition: 0.3s ease-in-out all;
 }
 
 /*# sourceMappingURL=index.css.map */
