--- a/src/sass/new_home/_homeabout.scss
+++ b/src/sass/new_home/_homeabout.scss
@@ -8,11 +8,12 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url(../public/narae.webp);
+    background-image: url(../narae.webp);
     background-color: $cc-primary-700;
     background-blend-mode: screen;
 
     transition: $transition 0.025s;
+
     &:hover {
       transform: scale(1.05);
       background-color: transparent;
@@ -26,7 +27,110 @@
       min-height: 40px;
     }
   }
+}
 
-  // &--experience {
-  // }
+.fill_scroller {
+  background: $cc-primary-600;
+
+  li {
+    color: $cc-sand-600;
+  }
+}
+
+.stroke_scroller {
+  background: transparent;
+  border: 2px solid $cc-primary-600;
+
+  li {
+    color: $cc-primary-600;
+  }
+}
+
+.scroller {
+  max-width: 100vw;
+
+  &__inner {
+    padding-block: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+
+    li {
+      @extend .poppins-medium;
+      font-size: 2rem;
+
+      display: block;
+      text-transform: uppercase;
+    }
+  }
+
+  &[data-animated='true'] {
+    // border: 5px solid lime;
+
+    overflow: hidden;
+
+    -webkit-mask: linear-gradient(
+      90deg,
+      transparent,
+      white 20%,
+      white 80%,
+      transparent
+    );
+    mask: linear-gradient(
+      90deg,
+      transparent,
+      white 20%,
+      white 80%,
+      transparent
+    );
+
+    & .scroller__inner {
+      width: max-content;
+      flex-wrap: nowrap;
+      animation: scroll var(--_animation-duration, 40s)
+        var(--_animation-direction, forwards) linear infinite;
+    }
+  }
+
+  &[data-direction='right'] {
+    --_animation-direction: reverse;
+  }
+  &[data-direction='left'] {
+    --_animation-direction: forwards;
+  }
+  &[data-speed='slow'] {
+    --_animation-duration: 200s;
+  }
+  &[data-speed='fast'] {
+    --_animation-duration: 100s;
+  }
+}
+
+@keyframes scroll {
+  to {
+    transform: translate(calc(-50% - 1rem));
+  }
+}
+
+.home_about--my_image {
+  transform: translateX(-10vw);
+  opacity: 0;
+
+  transition: $transition;
+}
+
+.home_about--me {
+  .home_me_title {
+    transform: translateX(20px);
+    opacity: 0;
+
+    transition: $transition;
+  }
+}
+
+p.home_about-feature {
+  transform: translateY(20px);
+  opacity: 0;
+
+  transition: $transition;
 }
