--- a/src/index.css
+++ b/src/index.css
@@ -243,12 +243,6 @@ hr {
     padding-bottom: 3.75rem;
   }
 }
-#projects,
-#faq {
-  width: 90%;
-  margin: 0 auto;
-}
-
 .wrapper {
   width: 100%;
   height: 100%;
@@ -268,6 +262,17 @@ hr {
   }
   100% {
     background-position: 100%;
+  }
+}
+.responsive-padding {
+  padding-top: max(10rem, 9vh);
+  padding-bottom: max(10rem, 9vh);
+}
+
+@media screen and (max-width: 767px) {
+  .responsive-padding {
+    padding-top: max(5rem, 9vh);
+    padding-bottom: max(5rem, 9vh);
   }
 }
 .heading-container {
