--- a/src/index.css
+++ b/src/index.css
@@ -407,6 +407,9 @@ article.project-item {
 #faq .faq-container h2 {
   margin-bottom: 2.5rem;
 }
+#faq .faq-container h5 {
+  color: #fcf6ec;
+}
 #faq .link-about {
   display: flex;
   flex-direction: row;
@@ -415,7 +418,6 @@ article.project-item {
   position: relative;
   margin: 2.5rem auto;
   max-width: 20rem;
-  border-radius: 2rem;
   background: #4e3de8;
   color: #fefefe;
   padding: 0.5rem 1rem;
@@ -442,13 +444,7 @@ article.project-item {
 @media screen and (min-width: 768px) {
   #faq .faq-container {
     padding: 5rem 0;
-    border: 1px solid #a79ef4;
-    border-radius: 2rem;
-    box-shadow: 0px 4px 40px 0px rgba(78, 61, 232, 0.04);
     transition: 0.3s ease-in-out all;
-  }
-  #faq .faq-container:hover {
-    box-shadow: 0px 8px 44px 0px rgba(78, 61, 232, 0.12);
   }
   #faq .faq-container h2 {
     text-align: center;
@@ -943,7 +939,7 @@ button:disabled {
   left: 0;
   right: 0;
   margin: auto;
-  background-color: #4e3de8;
+  background-color: #fcf6ec;
   border-radius: 1rem;
   -webkit-transition: 0.3s ease-in-out all;
   transition: 0.3s ease-in-out all;
@@ -957,10 +953,10 @@ button:disabled {
   height: 1rem;
 }
 .plus-minus.question-active {
-  background-color: #4e3de8;
+  background-color: #fcf6ec;
 }
 .plus-minus.question-active:after, .plus-minus.question-active:before {
-  background-color: #fefefe;
+  background-color: #4637d1;
 }
 .plus-minus.question-active:after {
   transform: rotate(-90deg);
