--- a/src/index.css
+++ b/src/index.css
@@ -1232,4 +1232,61 @@ p.home_about-feature {
   transition: 0.3s ease-in-out all;
 }
 
+.project_title--container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  height: 100vh;
+  margin: 0 auto;
+}
+.project_title--container_line {
+  position: sticky;
+  height: 20vh;
+  margin: 0 auto;
+}
+.project_title--container_line--inner {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  height: 100vh;
+}
+.project_title {
+  font-size: 14rem;
+  font-family: "Bebas Neue";
+  position: sticky;
+  left: 50%;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 5;
+  margin: 0;
+  color: white;
+}
+.project_title--line {
+  border-right: 1px solid #8377ef;
+}
+.project_title--img {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  object-fit: cover;
+  z-index: 1;
+}
+.project_title--img:before {
+  content: "";
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  z-index: 4;
+  top: 0;
+  left: 0;
+  border-right: 1px solid #8377ef;
+}
+
+#project-gallery {
+  position: relative;
+  z-index: 2;
+}
+
+.gallery {
+  height: 200vh;
+}
+
 /*# sourceMappingURL=index.css.map */
